--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "crypto": "latest",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.7.4",
     "gcp-metadata": "latest",
     "input-otp": "1.4.1",
     "kerberos": "latest",
