--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "snappy": "latest",
     "socks": "latest",
     "sonner": "^1.7.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
